# parkinsons

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 00-cm-ensure-polars-works.ipynb  01-cm-initial-data-exploration.ipynb
