[project]
name = "Kaggle's Parkinson's Freezing of Gait Prediction"
version = "0.0.1"
description = "My contribution to the competition"
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = [
    "polars>=0.17.0",
    "pandas>=2.0.0",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
