[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Caroline Mimeault", email = "carolinemimeault@gmail.com"},
]
dependencies = [
    "polars>=0.17.0",
    "ipykernel>=6.22.0",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
